--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,26 @@
   background-color: #ccc;
 }
 
+.pot {
+  width: 250px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  margin-right: 20px;
+  border: 1px solid #e7e7e7;
+  border-radius: 10px;
+  background-color: #ccc;
+}
+
+.spacer {
+  background: rgb(43, 0, 255);
+  width: 100%;
+  opacity: 0.25;
+  height: 36px;
+}
+
 .row {
   display: flex;
   gap: 10px;
